--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,43 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
+
+.contentWindow {
+  margin: 1em 2em;
+}
+
+
+.linkContainer { 
+  
+  border:5px solid black;
+  padding: 1em;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-around;
+
+}
+
+.linkIcon {
+  flex: 1;
+  width: 100%;
+  width: 100%
+}
+
+.App-logo {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+@media screen and (min-width: 600px) {
+  /* Will be applied when screen is wider that 600px */
+ 
+}
+
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +71,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
